--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,25 +29,6 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_scrollFlags="scroll|enterAlways|snap" />
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize">
-
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/search_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/two_measures"
-                android:layout_marginEnd="@dimen/two_measures"
-                android:layout_marginBottom="@dimen/two_measures_small"
-                android:background="@drawable/shape_searchview"
-                app:closeIcon="@drawable/ic_close_black"
-                app:iconifiedByDefault="false"
-                app:queryHint="@string/search_hint"
-                app:searchIcon="@drawable/ic_search_black" />
-        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -74,5 +55,13 @@
             android:layout_height="@dimen/six_measures"
             android:layout_gravity="center" />
     </FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/two_measures"
+        app:srcCompat="@drawable/ic_search_black" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
